# MyDictionary

./: .gitignore  CMakeLists.txt
include/: Dictionary.h  MyFile.h  Word.h  menu.h  tools.h
src/: CMakeLists.txt  Dictionary.cpp  MyFile.cpp  Word.cpp  main.cpp
uts/: project-test.cpp
